fixed bug with dropdown not opening properly with second dropodown open on mobile

--- a/components.css
+++ b/components.css
@@ -172,7 +172,7 @@ footer p {
             .nav ul li a {
                 padding: 20px 25px;
             }
-            .hover:hover .list {
+            .list {
                 position: relative !important;
                 height: 100%;
                 width: 100%;
